Initial implementation to use the SSD1306 display module (128x64 Dot Matrix OLED/PLED Segment/Common Driver with Controller - http://www.solomon-systech.com, Rev 1.1, Apr 2008). Original code available at https://github.com/ExploreEmbedded/8051_DevelopmentBoard/blob/master/Code/Keil_Sample_Codes/00-libfiles/oled_i2c.c (with modifications to work with SDCC). Current raw implementation only works with 128x64 displays (pending changes to be compatible with 128x32 modules too).

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "8051.h": "c",
-        "at89x51.h": "c"
+        "at89x51.h": "c",
+        "ssd1306_i2cbus.h": "c"
     }
 }
